# mtg_deck_builder

./: .gitignore  CMakeLists.txt  LICENSE
src/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt  app.cpp  app.h  main.cpp
src/lib/: CMakeLists.txt
src/lib/card_reader/: CMakeLists.txt  cardFromJson.cpp  cardFromJson.h  card_reader.cpp  card_reader.h
src/lib/game/: CMakeLists.txt  game.cpp  game.h  phases.h  player.cpp  player.h
src/lib/gui/: CMakeLists.txt  MainComponent.cpp  MainComponent.h  mainmenu.cpp  mainmenu.h  mainwindow.cpp  mainwindow.h  newgamepanel.cpp  newgamepanel.h
src/lib/mtg_card/: CMakeLists.txt  card.h  cardFromJson.h  colors.h  types.h
